--- a/index.html
+++ b/index.html
@@ -1,103 +1,143 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="en">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Curso de Inglês - Teste</title>
+<title>My English App - Capítulos</title>
 <style>
-body { font-family: Arial, sans-serif; background: #f5f5f5; margin: 0; padding: 20px; }
-h1 { text-align: center; color: #333; }
-.chapter-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(120px, 1fr)); gap: 15px; max-width: 400px; margin: 0 auto 20px auto; }
-.chapter-card { background: #2980b9; color: white; padding: 20px; text-align: center; border-radius: 10px; cursor: pointer; }
-.chapter-card:hover { background: #3498db; }
-.card { display: none; background: white; max-width: 500px; margin: 20px auto; padding: 20px; border-radius: 10px; box-shadow: 0 4px 8px rgba(0,0,0,0.1); }
-.card h2 { color: #333; }
-.options button { display: block; width: 100%; margin: 10px 0; padding: 10px; border: none; border-radius: 5px; background: #2980b9; color: white; cursor: pointer; }
-.options button:hover { background: #3498db; }
-.nav-btn { padding: 8px 15px; margin: 5px; border: none; border-radius: 5px; background: #8e44ad; color: white; cursor: pointer; }
-.nav-btn:hover { background: #9b59b6; }
-input[type="text"] { width: 100%; padding: 8px; margin: 5px 0; border-radius: 5px; border: 1px solid #ccc; }
-.check-btn { margin-top: 10px; padding: 8px 15px; border: none; border-radius: 5px; background-color: #27ae60; color: white; cursor: pointer; }
+    /* 1. Estilos Gerais */
+    body {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        margin: 0;
+        padding: 0;
+        background-color: #f0f2f5;
+        color: #333;
+    }
+
+    /* 2. Cabeçalho */
+    h1 {
+        background-color: #003366; /* Azul Marinho Profissional */
+        color: white;
+        padding: 30px 20px;
+        margin-top: 0;
+        text-align: center;
+        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
+        font-size: 2em;
+    }
+
+    /* 3. Layout da Grade de Capítulos (HOME) */
+    #home-screen {
+        max-width: 1000px;
+        margin: 40px auto;
+        padding: 0 20px;
+    }
+    .chapter-grid {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); 
+        gap: 20px;
+    }
+    .chapter-card {
+        background-color: white;
+        padding: 25px;
+        border-radius: 12px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        text-align: center;
+        cursor: pointer;
+        transition: transform 0.3s ease, box-shadow 0.3s ease;
+        border-left: 5px solid #28a745; /* Linha Verde de Destaque */
+    }
+    .chapter-card:hover {
+        transform: translateY(-5px);
+        box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+    }
+    .chapter-card h3 {
+        color: #003366;
+        margin-top: 0;
+    }
+
+    /* 4. Tela de Quiz/Lição */
+    #lesson-screen {
+        max-width: 600px;
+        margin: 40px auto;
+        padding: 20px;
+        background-color: white;
+        border-radius: 12px;
+        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+        display: none; /* Começa escondida */
+    }
+    .quiz-question {
+        padding: 15px;
+        border: 1px solid #ddd;
+        border-radius: 8px;
+        margin-bottom: 20px;
+        text-align: center;
+    }
+    .quiz-question img {
+        max-width: 100%;
+        height: auto;
+        border-radius: 8px;
+        margin-bottom: 15px;
+    }
+
+    /* 5. Estilo das Opções de Resposta */
+    .option {
+        padding: 12px;
+        margin: 10px 0;
+        border-radius: 6px;
+        border: 1px solid #ccc;
+        cursor: pointer;
+        transition: background-color 0.2s, border-color 0.2s;
+    }
+    .option:hover {
+        background-color: #e9ecef;
+    }
+    .correct {
+        background-color: #d4edda !important; /* Verde Claro */
+        border-color: #28a745 !important; /* Borda Verde */
+        font-weight: bold;
+    }
+    .incorrect {
+        background-color: #f8d7da !important; /* Vermelho Claro */
+        border-color: #dc3545 !important; /* Borda Vermelha */
+        font-weight: bold;
+    }
+
+    /* 6. Botões de Navegação */
+    .nav-buttons {
+        display: flex;
+        justify-content: space-between;
+        margin-top: 30px;
+    }
+    .nav-buttons button {
+        padding: 10px 20px;
+        border: none;
+        border-radius: 6px;
+        cursor: pointer;
+        font-weight: bold;
+    }
+    #back-btn {
+        background-color: #6c757d; /* Cinza para Voltar */
+        color: white;
+    }
+    #next-btn {
+        background-color: #007bff; /* Azul para Próximo */
+        color: white;
+    }
+    #back-btn:hover { background-color: #5a6268; }
+    #next-btn:hover { background-color: #0056b3; }
 </style>
 </head>
 <body>
 
-<h1>Curso de Inglês - Teste</h1>
+<h1>Meu Curso de Inglês Básico - App de Venda</h1>
 
-<!-- Menu de capítulos -->
-<div id="menu">
+<div id="home-screen">
+    <h2>Selecione um Capítulo</h2>
     <div class="chapter-grid">
-        <div class="chapter-card" onclick="startChapter(1)">Capítulo 1</div>
-    </div>
-</div>
-
-<!-- Conteúdo do capítulo -->
-<div id="chapterContent">
-    <div id="topicCard" class="card">
-        <h2 id="topicTitle"></h2>
-        <p id="topicText"></p>
-        <div id="topicOptions" class="options"></div>
-        <input type="text" id="topicInput" placeholder="Digite aqui..." style="display:none;">
-        <button class="check-btn" id="checkBtn" onclick="checkInput()" style="display:none;">Check</button>
-        <div style="text-align:right;margin-top:10px;">
-            <button class="nav-btn" onclick="prevTopic()">Back</button>
-            <button class="nav-btn" onclick="nextTopic()">Next</button>
-            <button class="nav-btn" onclick="goMenu()">Menu</button>
-        </div>
-    </div>
-</div>
-
-<script>
-let currentChapter = 1;
-let currentTopic = 0;
-
-const chapters = {
-    1: [
-        {title:"Números", text:"Selecione o número 2:", options:["1","2","3"], answer:"2", type:"options"},
-        {title:"Cores", text:"Selecione a cor verde:", options:["Red","Green","Blue"], answer:"Green", type:"options"},
-        {title:"Família", text:"Digite o nome desta pessoa (mother):", answer:"mother", type:"input"}
-    ]
-};
-
-function startChapter(chapter){
-    currentChapter = chapter;
-    currentTopic = 0;
-    document.getElementById("menu").style.display = "none";
-    document.getElementById("chapterContent").style.display = "block";
-    showTopic();
-}
-
-function goMenu(){
-    document.getElementById("chapterContent").style.display = "none";
-    document.getElementById("menu").style.display = "block";
-}
-
-function showTopic(){
-    const topic = chapters[currentChapter][currentTopic];
-    document.getElementById("topicTitle").textContent = topic.title;
-    document.getElementById("topicText").textContent = topic.text;
-
-    if(topic.type === "options"){
-        document.getElementById("topicOptions").innerHTML = "";
-        topic.options.forEach(opt=>{
-            const btn = document.createElement("button");
-            btn.textContent = opt;
-            btn.onclick = ()=>checkAnswer(btn, topic.answer);
-            document.getElementById("topicOptions").appendChild(btn);
-        });
-        document.getElementById("topicOptions").style.display = "block";
-        document.getElementById("topicInput").style.display = "none";
-        document.getElementById("checkBtn").style.display = "none";
-    } else if(topic.type === "input"){
-        document.getElementById("topicInput").value = "";
-        document.getElementById("topicInput").style.display = "block";
-        document.getElementById("checkBtn").style.display = "inline-block";
-        document.getElementById("topicOptions").style.display = "none";
-    }
-}
-
-function nextTopic(){
-    if(currentTopic < chapters[currentChapter].length-1){
-        currentTopic++;
-        showTopic();
-    } else {
+        <script>
+            const chapterGrid = document.querySelector('.chapter-grid');
+            for (let i = 1; i <= 24; i++) {
+                chapterGrid.innerHTML += `
+                    <div class="chapter-card" onclick="startLesson(${i})">
+                        <h3>Capítulo ${i}</h3>
+                        <p>Tópico Principal do Capítulo ${i}</
